syntax = "proto3";

import "./primitives/addresses.proto";

message CallContractInput {
  UniversalAddress sender = 1;
  ContractAddress contractAddress = 2;
  string payload = 3;
}

message CallContractOutput {
  string resultJson = 1;
}
